--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
     
   provider: ^6.0.3
   get: ^4.6.5
-
+  flutter_svg: ^1.1.1+1
   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
